--- a/packages/state_machine_bloc/pubspec.yaml
+++ b/packages/state_machine_bloc/pubspec.yaml
@@ -1,8 +1,8 @@
-name: bloc_state_machine
+name: state_machine_bloc
 description: An extension to the bloc state management library which let you create State Machine using a declarative API.
 version: 0.0.1-dev.1
-homepage: https://github.com/Pierre2tm/bloc_state_machine
-repository: https://github.com/Pierre2tm/bloc_state_machine
+homepage: https://github.com/Pierre2tm/state_machine_bloc
+repository: https://github.com/Pierre2tm/state_machine_bloc
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
