timer example now use relative path instead of git

--- a/examples/flutter_timer_state_machine/pubspec.yaml
+++ b/examples/flutter_timer_state_machine/pubspec.yaml
@@ -13,9 +13,7 @@ dependencies:
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
   state_machine_bloc:
-    git: 
-      url: https://github.com/Pierre2tm/state_machine_bloc.git
-      path: packages/state_machine_bloc/
+    path: ../../packages/state_machine_bloc/
 
 dev_dependencies:
   flutter_test:
