--- a/packages/state_machine_bloc/pubspec.yaml
+++ b/packages/state_machine_bloc/pubspec.yaml
@@ -1,5 +1,5 @@
 name: state_machine_bloc
-description: An extension to the bloc state management library which let you create State Machine using a declarative API.
+description: An extension to the bloc state management library to define state machines that support state's data using a nice declarative API.
 version: 0.0.1-dev.2
 homepage: https://github.com/Pierre2tm/state_machine_bloc
 repository: https://github.com/Pierre2tm/state_machine_bloc
