--- a/packages/state_machine_bloc/pubspec.yaml
+++ b/packages/state_machine_bloc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: state_machine_bloc
-description: An extension to the bloc state management library to define state machines that support state's data using a nice declarative API.
-version: 0.0.1-dev.3
+description: state_machine_bloc is an extension to the bloc state management library which provide a convenient way to create finite state machines based blocs.
+version: 0.0.1-dev.4
 homepage: https://github.com/Pierre2tm/state_machine_bloc
 repository: https://github.com/Pierre2tm/state_machine_bloc
 
